[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "check_opencv_python"
description = "checker for opencv-python"
readme = "README.md"
version = "0.0.1"
authors = [
    {name = "katsunori-waragai", email="huyuhiko1128@gmail.com"},
]

requires-python = ">= 3.8"

dependencies = [
    "numpy<2",
    "opencv-python<4.10.0.84",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
    "black",
]

[project.urls]
Repository = "https://github.com/katsunori-waragai/check-opencv-python"

[tool.setuptools]
packages = ["check_opencv_python"]

[tool.black]
line-length = 120
